--- a/cdm_macroalgae.Rmd
+++ b/cdm_macroalgae.Rmd
@@ -47,7 +47,11 @@ An example of the above approach in practice is shown in the below animation. Th
 
 ### Macroalgae growth physiology
 
-The original AED macroalgal biomass model previously applied in the Generation 0 and 1 CDM applications, and exemplified in the above example, has been further developed to include includes numerous advances to light extinction within the canopy, nutrient cycling and excretion processes, and updates to the parameterisations associated with photosynthesis and biomass accumulation. The latter, in particular, are updated to better align with the experimental work reported in Waycott et al. (2019) and recent survey data collected as part of from the HCHB research program.
+The original AED macroalgal biomass model previously applied in the Generation 0 and 1 CDM applications, and exemplified in the above example, has been further developed to include  advances to light extinction within the canopy, nutrient cycling and excretion processes, and updates to the parameterisations associated with photosynthesis and biomass accumulation. The latter, in particular, are updated to better align with the experimental work reported in Waycott et al. (2019) and recent survey data collected as part of from the HCHB research program.
+
+The algal biomass, $FA$ (or $MAG_C$), is simulated in units of carbon ($mmol\:C/m^2$), and in addition the groups have been configured to have a variable C:N:P ratio. The model therefore tracks the internal cell nutrition and includes dynamic uptake rates of N and P sources simulated in response to changing water column conditions and internal nutrient stress.
+
+The growth rate functions used in Eq \@ref(eq:ulva6) are tailored to use temperature and salinity ranges based on the experimental data reported in Waycott et al. (2019).
 
 ### Resolving seasonal life-stage dynamics
 
@@ -55,7 +59,7 @@ Following review of the initial data and findings from the T&I project 2, the ap
 
 A new ‘colony’ based model for simulating clump emergence, biomass accumulation and sloughing has been conceptualised (Figure \@ref(fig:dev-ulva5)). The model adopts the same underlying physiology as described in the above section, but allows for age/size specific application of these rates to better align with recent observations and monitoring.
 
-```{r dev-ulva5, echo = FALSE, out.width='100%', class = "text-image", fig.cap = "Schematic depicting a new life-stage based macroalgal “clump” model being developed to track seasonal macroalgal biomass development and late-stage decay."}
+```{r dev-ulva5, echo = FALSE, out.width='100%', class = "text-image", fig.cap = "Schematic depicting a new life-stage based macroalgal “clump” model  developed to track seasonal macroalgal biomass development stages and late-stage decay."}
 
 knitr::include_graphics("images/dev/macroalgae_conceptual.png")
 
@@ -65,7 +69,7 @@ This approach allows more direct links with a) the experimental data collected o
 
 The approach essentially follows a size-class based model for resolving the filamentous algae biomass pool. According to the above conceptual schematic, four discrete life-stage (aka size) categories are included. In general they are fixed in space, but note that 'sloughed' biomass (Stage 4) becomes mobilised after a sloughing 'event', and can continue to be exposed to surface light irradiances and also begin decomposition should environmental conditions be inadequate for growth (e.g., as the water becomes too salty).
 
-The algal biomass of each group, $MAG_C$, is simulated in units of carbon ($mmol\:C/m^2$), and the groups have been configured to have a variable C:N:P ratio, with dynamic uptake rates of N and P sources simulated in response to changing water column conditions and cellular physiology. The fundamental balance equation shaping growth remains as depicted in Eq  to capture the various processes impacting ulva growth and decay, with the difference that each growth-stage allows for different light, nutrien and salinity sensitivity, and there is a aging component linking the size classes.  A full description of the AED macroalgae model can be referred to the [AED science manual](https://aquaticecodynamics.github.io/aed-science/DO_1.html). 
+The fundamental balance equation shaping growth remains as depicted in Eq \@ref(eq:ulva5) to capture the various processes impacting ulva growth and decay, with the difference that each growth-stage allows for different light, nutrient and salinity sensitivity, and there is a aging component linking the size classes, $R_{aging}$.  A full description of the AED macroalgae model can be referred to the [AED science manual](https://aquaticecodynamics.github.io/aed-science/DO_1.html). 
 
 ### Ulva HSI
 
@@ -78,7 +82,7 @@ In addition to the simulation of Ulva biomass, a simple "Habitat Suitability Ind
 
 ### Algae extent within the lagoon
 
-Regular monitoring for macroalgae biomass within the Coorong is not routinely undertaken, but a range of data are available over the model calibration and testing periods. A summary of the available algal extent data is summarised in Table X.
+Regular monitoring for macroalgae biomass within the Coorong is not routinely undertaken, but a range of data are available over the model calibration and testing periods. A summary of the available algal extent data is summarised in Table \@ref(tab:3-malgtable).
 
 ```{r 3-malgtable, echo=FALSE, message=FALSE, warning=FALSE}
 library(knitr)
@@ -209,7 +213,6 @@ In order to set/refine the parameters required for the macroalgae model, such as
 
 ## Model setup
 
-, including the salinity limitation functions on phytoplankton communities.
 
 
 Four pools were configured to simulate the biomass of filamentous algae, $ulva_a$, $ulva_b$, $ulva_c$ and $ulva_s$. The parameters used in the setup are outlined in Table (Table \@ref(tab:6-malgpars)).
@@ -309,7 +312,7 @@ row_spec(0, background = "#14759e", bold = TRUE, color = "white") %>%
 
 ### Generation 0
 
-Using the Generation 0 model, the following assessment against Ulva biomass prediction and data showing presence/absence was recorded (Figure \@ref(fig:dev-ulva12)). 
+Using the Generation 0 model, the following assessment against Ulva biomass prediction and data showing presence/absence was recorded (Figure \@ref(fig:dev-ulva12)). The simulated biomass reasonably correlated with the presence/absence data record in 2016 in particular, but included several false positives in 2017 in the South Lagoon. Whilst biomass data wasn't recorded in the survey data for these time periods, the simulated biomass concentrations have retrospectively been seen to be systematically under predicting the typical biomass levels seen in the HCHB field surveys.
 
 ```{r dev-ulva12, echo = FALSE, out.width='45%', class = "text-image",fig.show='hold',fig.align='center', fig.cap = "Comparison of observed and simulated Ulva for 2016 (left) and 2017 (right)."}
 
@@ -317,7 +320,7 @@ knitr::include_graphics(c("images/dev/AlgaeDec2016vsULVAbiomass2016.png","images
 
 ```
 
-The modelled $Ulva\:HSI$ prediction correlates well with the observed filamentous algae density, however, the correlation between predicted biomass and obsevred presence was less accurate (Figure \@ref(fig:dev-ulva13)). This implies the growth controls (as embodied in the HSI) are well resolved, but the seasonal factors leading to biomass accumulation are more complicated and need further refinement. The HSI range was however quite restricted and further data from 2020-2021 is needed to assess whether the HSI calculation needs further refinement.  
+Nonetheless, the modelled $Ulva\:HSI$ prediction correlated well with the observed filamentous algae abundance categories (Figure \@ref(fig:dev-ulva13)). This implies the growth controls (as embodied in the HSI) are well resolved, but the seasonal factors leading to biomass accumulation were more complicated, thus justifying the further refinements outlined in Section 6.3. The HSI range was however quite restricted and not as sensitive suggesting the normalisation could be improved.  
 
 
 ```{r dev-ulva13, echo = FALSE, out.width='100%', class = "text-image",fig.align='center', fig.cap = "Filamentous algae observed density and equivalent model predicted Ulva HSI (top) and Ulva Biomass (bottom)."}
@@ -328,8 +331,11 @@ knitr::include_graphics("images/dev/Algae_2016.png")
 
 ### Generation 2
 
-The Generation 2 model results were compared with HCHB survey data in 2020 - 2021.  
+Following further refinement of the general water quality model calibration (as outlined in Chapters 4-5), and the macroalgae model developments (Section 6.3), the Generation 2 model was run over the period from 2020-2021, inclusive, and the results were compared with in-depth HCHB survey data collected during several surveys undertaken within the period (see Figure \@ref(fig:dev-ulva11)).   
 
+The model results are shown in  Figure \@ref(fig:dev-ulva14) - \@ref(fig:dev-ulva15) for the 2020 dataset, and Figure \@ref(fig:dev-ulva16) - \@ref(fig:dev-ulva17) for the 2021 dataset. 
+
+ 
 ```{r dev-ulva14, echo = FALSE, out.width='100%', class = "text-image", fig.align='center', fig.cap = "Comparison of Observed and Simulated Ulva biomass (g DW/m2) for 2020."}
 
 knitr::include_graphics("images/dev/algae_biomass_2020_map.png")
@@ -355,7 +361,9 @@ knitr::include_graphics("images/dev/algae_biomass_2021.png")
 
 ## Summary 
 
-The macroalgae model in AED has been able to capture the broad spatial patterns in environmental drivers that control the drivers and biomass of the *Ulva* community. Comparison of the Generation 0 model with the pre-HCHB survey data provided insights to the suitability of the model approach, and demonstrated the growth drivers (as captured via the Ulva HSI) correlated well with the ealry (albeit patchy) observations of biomass occurrence. This has been further refined in the Generation 1, 1.5 and 2.0 model simulations to ultimately allow simulation of the spatial extent of filamentous algal biomass accumulation. 
+The macroalgae model in AED has been able to capture the broad spatial patterns in environmental drivers that control the drivers and biomass of the *Ulva* community. Comparison of the Generation 0 model with the pre-HCHB survey data provided insights to the suitability of the model approach, and demonstrated the growth drivers (as captured via the $Ulva\:HSI$) correlated well with the early (albeit patchy) observations of biomass occurrence. This has been further refined in the Generation 1, 1.5 and 2.0 model simulations to ultimately allow simulation of the spatial extent of filamentous algal biomass accumulation. 
+
+The Generation 2 model showed mixed accuracy against the more comprehensive dataset from 2021 and 2022 with a more notable number of false positives - areas where biomass was predicted to occur but was not observed in the field.This is recommended as an area for further investigation.
 
 
 
