--- a/appendix_a.Rmd
+++ b/appendix_a.Rmd
@@ -1,8 +1,8 @@
 # Appendix A : Data Catalogue {-}
 
-## Coorong data catalogue (Sept 2021) {-}
+## Coorong data categories {-}
 
-A summary of the available data categorised by data type and agency/supplier is shown below (Table \@ref(tab:A-datacatalogue)). Data is categorised in the general areas of :
+All data available for model setup and validation has been compiled, from HCHB research, prior research and routine monitoring (see [Chapter 3](Model-Data Ecosystem)). Data is categorised in the general areas of :
 
 + *Bathymetry*
 + *Meteorology*
@@ -11,8 +11,33 @@ A summary of the available data categorised by data type and agency/supplier is 
 + *Sediment*
 + *Biota*
 
-These are defined in Table (Table \@ref(tab:A-dataclasses)).
+These are defined into sub-categories, as outlined in Table \@ref(tab:A-dataclasses).
 
+<br>
+
+```{r A-dataclasses, echo=FALSE, message=FALSE, warning=FALSE}
+library(knitr)
+library(kableExtra)
+library(readxl)
+library(rmarkdown)
+theSheet <- read_excel('tables/CDM_Classes.xlsx', sheet = 2)
+theSheet <- theSheet[theSheet$Table == "Data",]
+theSheetGroups <- unique(theSheet$Group)
+
+kbl(theSheet[,3:4], caption = "CDM Data Classification", align = "l",) %>%
+
+row_spec(0, background = "#14759e", bold = TRUE, color = "white") %>%
+  kable_styling(full_width = T,font_size = 10) %>%
+    scroll_box(fixed_thead = FALSE)
+```
+
+<br>
+
+## Coorong data catalogue {-}
+
+A summary of the available data categorised by these data types and by agency/supplier is shown below (Table \@ref(tab:A-datacatalogue)). Data is accesible via the `data` folder of the CDM [GitHub repository](https://github.com/AquaticEcoDynamics/CDM/tree/master/data). Please refer to the master data catalogue spreadsheet therein for data provenance information.
+
+<br>
 ```{r A-datacatalogue, echo=FALSE, message=FALSE, warning=FALSE}
 library(knitr)
 library(kableExtra)
@@ -59,24 +84,5 @@ row_spec(0, background = "#14759e", bold = TRUE, color = "white") %>%
 ```
 
 <br>
-
-```{r A-dataclasses, echo=FALSE, message=FALSE, warning=FALSE}
-library(knitr)
-library(kableExtra)
-library(readxl)
-library(rmarkdown)
-theSheet <- read_excel('tables/CDM_Classes.xlsx', sheet = 2)
-theSheet <- theSheet[theSheet$Table == "Data",]
-theSheetGroups <- unique(theSheet$Group)
-
-kbl(theSheet[,3:4], caption = "CDM Data Classification", align = "l",) %>%
-
-row_spec(0, background = "#14759e", bold = TRUE, color = "white") %>%
-  kable_styling(full_width = T,font_size = 10) %>%
-    scroll_box(fixed_thead = FALSE)
-```
-
-<br>
-
 
 
